kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/dev-network: "true"
        io.kompose.service: api
    spec:
      containers:
        - image: api
          name: api
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources: {}
      hostname: api
      restartPolicy: Always
status: {}
