kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/dev-network: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      hostname: redis
      restartPolicy: Always
status: {}
